# 3d-reconstruction_exercises

data/: weights_dragon.txt
exercise_01/: CMakeLists.txt  main.cpp  off_sample.off
exercise_02/: CMakeLists.txt  ImplicitSurface.h  MarchingCubes.h  main.cpp
exercise_03/: CMakeLists.txt  ProcrustesAligner.h  main.cpp
exercise_04/: CMakeLists.txt  dragon.cpp  gaussian.cpp  output_dragon.txt  output_gaussian.txt  output_surface.txt  surface.cpp
exercise_05/: CMakeLists.txt  ICPOptimizer.h  PointCloud.h  ProcrustesAligner.h  main.cpp
